Add support OpenAPI Explorer for view (#1320)
Co-authored-by: Sergio del Amo <sergio.delamo@softamo.com>